--- a/workingWithService/bound/build.gradle
+++ b/workingWithService/bound/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.example.engineerakash.workingwithservice"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -23,7 +22,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile project (':simple')
-    compile project (':intent')
-    compile project (':bound')
 }
